# Ascend-ModelZoo-PyTorch

./: .gitignore  CONTRIBUTING_TRAIN.md  OWNERS  README.md  Third_Party_Open_Source_Software_Notice
ACL_PyTorch/: README.md  environment.md
ACL_PyTorch/built-in/: ACL_PyTorch - 快捷方式.lnk
ACL_PyTorch/contrib/: CONTRIBUTING.md
ACL_PyTorch/docs/: 01.ONNX推理流程.md  01.在线推理.md  02.ONNX的导出.md  03.ONNX转OM.md  04.离线推理.md  05.01.ResNet50 使用静态 AIPP 的案例.md  05.02.GLIP、CLIP 性能优化案例.md  05.性能优化.md  05.离线推理.md  06.性能优化.md  README.md
ACL_PyTorch/docs/ONNX/: 04.离线推理.md  05.01.ResNet50 使用静态 AIPP 的案例.md  05.02.GLIP、CLIP 性能优化案例.md  05.性能优化.md
ACL_PyTorch/docs/torchair/: README.md
AscendIE/: README.CN.md
AscendIE/TorchAIE/built-in/foundation/ChatGLM2-6B/compile/: CMakeLists.txt  build.sh  chatglm2_test.cpp  run.sh
MindIE/LLM/DeepSeek-R1-Distill-Llama-70B/: README.md
MindIE/LLM/DeepSeek-R1-Distill-Llama-8B/: README.md
MindIE/LLM/DeepSeek-R1-Distill-Qwen-1.5B/: README.md
MindIE/LLM/DeepSeek-R1-Distill-Qwen-1.5B-OrangePi/: README.md  requirements.txt
MindIE/LLM/DeepSeek-R1-Distill-Qwen-14B/: README.md
MindIE/LLM/DeepSeek-R1-Distill-Qwen-32B/: README.md
MindIE/LLM/DeepSeek-R1-Distill-Qwen-7B/: README.md
MindIE/LLM/DeepSeek-R1-Distill-Qwen-7B-OrangePi/: README.md
MindIE/LLM/Qwen2.5/: README.md
MindIE/MindIE-Torch/built-in/foundation/stable_diffusion_xl/quant/: CMakeLists.txt  build.sh  quant_ops.cpp
MindIE/MultiModal/CogVideoX/: README.md  inference.py  requirements.txt
MindIE/MultiModal/CogView3-Plus-3B/: README.md  inference_cogview3plus.py  requirements.txt  requirents.txt
MindIE/MultiModal/Flux.1-DEV/: README.md  inference_flux.py  requirements.txt  tpsplit_weight.py
PyTorch/: README.CN.md
PyTorch/contrib/: CONTRIBUTING.md  ENVIRONMENTS.md
(+4238 files in other folders)
